@@ -19,6 +19,9 @@
 
 =CHANGELOG=
 
+Rev. 10:
+  - added lithuania translation, thanks to visagalis
+
 Rev. 9:
   - upgraded MangAdmin's License to GPL v.3
   - applied GPL v.3 headers to nearly all MangAdmin files
